--- a/src/views/productsList.html
+++ b/src/views/productsList.html
@@ -1,5 +1,5 @@
 <strong>Special products:</strong>
-<div *ngFor="#product of specialProducts">{{ product.name }}</div>
+<products-special [productsSpecial]="specialProducts"></products-special>
 
 <strong>Normal products:</strong>
 <product *ngFor="#product of products" [item]="product"></product>
