Separate product.json and add filter func

--- a/src/views/productsSite.view.html
+++ b/src/views/productsSite.view.html
@@ -1,4 +1,6 @@
+
 <h3>Special Products</h3>
 <products-list [products]="specialProducts"></products-list>
 <h3>Products</h3>
+<input [ngFormControl]="searchInput" />
 <products-list [products]="products"></products-list>
