--- a/src/views/productsSite.view.html
+++ b/src/views/productsSite.view.html
@@ -3,4 +3,6 @@
 <products-list [products]="specialProducts"></products-list>
 <h3>Products</h3>
 <input [ngFormControl]="searchInput" />
+
+<sort-btn (sort)="emitOnSort($event)"></sort-btn>
 <products-list [products]="products"></products-list>
